--- a/src/scss/abstracts/_plaseholders.scss
+++ b/src/scss/abstracts/_plaseholders.scss
@@ -1,13 +1,15 @@
 %h2-font {
 	font-family: $headline-font;
   font-size: 36px;
-  line-height: 48px; 
+	line-height: 48px;
+	text-transform: uppercase;
 }
 
 %h3-font {
 	font-family: $headline-font;
 	font-size: 24px;
 	line-height: 32px;
+	text-transform: uppercase;
 }
 
 %item-font{
