--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -6,10 +6,10 @@ body {
     background-color: #000;
 }
 
-h1, h2, h3, h4 {
-    font-family: $headline-font;
-}
+// h1, h2, h3, h4 {
+//     font-family: $headline-font;
+// }
 
 .container {
-    width: 1100px;
+    width: 1110px;
 }
