--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,3 +1,8 @@
 extends layout.pug
 
 block content
+  section.first-screen
+    .first-screen__logo
+      img(src="img/logo_city.png", alt="PORTEN Санкт-Петербург")
+    p.first-screen__text.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus, est tortor pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum nec ut iaculis. Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. Tortor nibh magna feugiat id nunc, dui nisl viverra.
