--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -13,3 +13,30 @@ body {
 .container {
     width: 1110px;
 }
+
+// CONTENT
+.first-screen {
+    padding: 160px 0 155px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: url(../img/first_screen.jpg) no-repeat;
+    background-size: cover;
+
+    &__logo {
+        margin-bottom: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 320px;
+        height: 320px;
+        border: 4px solid #FFF;
+    }
+
+    &__text {
+        max-width: 730px;
+        font-size: 16px;
+        text-align: center;
+        text-transform: uppercase;
+    }
+}
