add: section new

--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -3,3 +3,13 @@
   color: #FFF;
   background-color: #000;
 }
+
+.transparent-button {
+  padding: 12px 28px;
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: uppercase;
+  color: #FFF;
+  border: 2px solid #FFF;
+  background-color: transparent;
+}
