--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,3 +6,32 @@ block content
       img(src="img/logo_city.png", alt="PORTEN Санкт-Петербург")
     p.first-screen__text.
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus, est tortor pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum nec ut iaculis. Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. Tortor nibh magna feugiat id nunc, dui nisl viverra.
+  
+  section.new
+    .new__season.col-6
+      h2.new__title СЕЗОН 2020/21
+      .new__products.col-12
+        .new__item
+          .new__img
+            img(src="img/watch.png", alt="Louis XVI ATHOS")
+          .new__info
+            span.new__model Louis XVI ATHOS
+            span.new__price 165 000 руб.
+
+        .new__item
+          .new__img
+            img(src="img/watch.png", alt="Louis XVI ATHOS")
+          .new__info
+            span.new__model Louis XVI ATHOS
+            span.new__price 165 000 руб.
+
+        .new__item
+          .new__img
+            img(src="img/watch.png", alt="Louis XVI ATHOS")
+          .new__info
+            span.new__model Louis XVI ATHOS
+            span.new__price 165 000 руб.
+
+    .new__collection.col-6
+      h2.new__title Новая коллекция
+      button.transparent-button Каталог
