--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -1,42 +1,137 @@
 body {
-    font-family: $main-font;
-    font-size: 14px;
-    line-height: 150%;
-    color: #FFF;
-    background-color: #000;
+	font-family: $main-font;
+	font-size: 14px;
+	line-height: 150%;
+	color: #FFF;
+	background-color: #000;
 }
 
-// h1, h2, h3, h4 {
-//     font-family: $headline-font;
-// }
+h2 {
+	@extend %h2-font;
+}
+
+h3 {
+	@extend %h3-font;
+}
 
 .container {
-    width: 1110px;
+	width: 1110px;
 }
 
 // CONTENT
 .first-screen {
-    padding: 160px 0 155px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background: url(../img/first_screen.jpg) no-repeat;
-    background-size: cover;
+	padding: 160px 0 155px 0;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background: url(../img/first_screen.jpg) no-repeat;
+	background-size: cover;
 
-    &__logo {
-        margin-bottom: 80px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 320px;
-        height: 320px;
-        border: 4px solid #FFF;
-    }
+	&__logo {
+		margin-bottom: 80px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 320px;
+		height: 320px;
+		border: 4px solid #FFF;
+	}
 
-    &__text {
-        max-width: 730px;
-        font-size: 16px;
-        text-align: center;
-        text-transform: uppercase;
-    }
+	&__text {
+		max-width: 730px;
+		font-size: 16px;
+		text-align: center;
+		text-transform: uppercase;
+	}
+}
+
+.new {  
+	display: flex;
+
+	&__title {
+		position: relative;
+	}
+
+	&__title:after {
+		position: absolute;
+		margin: auto;
+		display: block;
+		content: '';
+		bottom: -50px;
+		left: 0;
+		right: 0;
+		width: 120px;
+		height: 1px;
+		background-color: #FFF;
+	}
+
+	&__season {
+		padding: 93px 80px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+
+		h2 {
+			margin-bottom: 100px;
+		}
+	}
+
+	&__products {
+		display: flex;
+		justify-content: center;
+	}
+
+	&__item {
+		margin-right: 50px;
+		font-family: $headline-font;
+	}
+
+	&__item:last-child {
+		margin-right: 0;
+	}
+
+	&__img {
+		margin-bottom: 25px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		width: 260px;
+		height: 325px;
+		background-color: #191B1C;
+	}
+
+	&__info {
+		display: flex;
+		flex-direction: column;
+	}
+
+	&__model {
+		margin-bottom: 10px;
+		font-size: 18px;
+		line-height: 24px;
+	}
+
+	&__price {
+		font-size: 16px;
+		line-height: 21px;
+	}
+
+	&__collection {
+		padding: 100px;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-end;
+		align-items: center;
+		background: url(../img/new_collection.png) no-repeat;
+		background-size: cover;
+
+		h2 {
+			margin-bottom: 60px;
+		}
+
+		h2:after {
+			margin-bottom: 30px;
+		}
+	}
+
 }
