--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -35,3 +35,12 @@ block content
     .new__collection.col-6
       h2.new__title Новая коллекция
       button.transparent-button Каталог
+
+  section.last-collection
+    .last-collection__img.col-6
+      img(src="img/last_collection.jpg", alt="collection-2018")
+    .last-collection__info.col-6
+      h2.last-collection__title коллекция 2018
+      p.last-collection__text.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra sed diam. 
+      button.transparent-button посмотреть коллекцию
