--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,26 +11,26 @@ block content
     .new__season.col-6
       h2.new__title СЕЗОН 2020/21
       .new__products.col-12
-        .new__item
-          .new__img
+        .new__item.item
+          .new__img.item__img
             img(src="img/watch.png", alt="Louis XVI ATHOS")
-          .new__info
-            span.new__model Louis XVI ATHOS
-            span.new__price 165 000 руб.
+          .new__info.item__info
+            span.item__model Louis XVI ATHOS
+            span.item__price 165 000 руб.
 
-        .new__item
-          .new__img
+        .new__item.item
+          .new__img.item__img
             img(src="img/watch.png", alt="Louis XVI ATHOS")
-          .new__info
-            span.new__model Louis XVI ATHOS
-            span.new__price 165 000 руб.
+          .new__info.item__info
+            span.item__model Louis XVI ATHOS
+            span.item_price 165 000 руб.
 
-        .new__item
-          .new__img
+        .new__item.item
+          .new__img.item__img
             img(src="img/watch.png", alt="Louis XVI ATHOS")
-          .new__info
-            span.new__model Louis XVI ATHOS
-            span.new__price 165 000 руб.
+          .new__info.item__info
+            span.item__model Louis XVI ATHOS
+            span.item__price 165 000 руб.
 
     .new__collection.col-6
       h2.new__title Новая коллекция
@@ -44,3 +44,64 @@ block content
       p.last-collection__text.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra sed diam. 
       button.transparent-button посмотреть коллекцию
+
+  .container
+    section.new-goods
+      h2.new-goods__title новые поступления
+      .new-goods__products.col-12
+        .new-goods__item.item
+            .new-goods__img.item__img
+              img(src="img/watch.png", alt="Louis XVI ATHOS")
+            .new-goods__info.item__info
+              span.item__model Louis XVI ATHOS
+              span.item__price 165 000 руб.
+
+        .new-goods__item.item
+              .new-goods__img.item__img
+                img(src="img/watch.png", alt="Louis XVI ATHOS")
+              .new-goods__info.item__info
+                span.item__model Louis XVI ATHOS
+                span.item__price 165 000 руб.
+        
+        .new-goods__item.item
+            .new-goods__img.item__img
+              img(src="img/watch.png", alt="Louis XVI ATHOS")
+            .new-goods__info.item__info
+              span.item__model Louis XVI ATHOS
+              span.item__price 165 000 руб.
+
+        .new-goods__item.item
+            .new-goods__img.item__img
+              img(src="img/watch.png", alt="Louis XVI ATHOS")
+            .new-goods__info.item__info
+              span.item__model Louis XVI ATHOS
+              span.item__price 165 000 руб.
+
+        .new-goods__item.item
+              .new-goods__img.item__img
+                img(src="img/watch.png", alt="Louis XVI ATHOS")
+              .new-goods__info.item__info
+                span.item__model Louis XVI ATHOS
+                span.item__price 165 000 руб.
+        
+        .new-goods__item.item
+            .new-goods__img.item__img
+              img(src="img/watch.png", alt="Louis XVI ATHOS")
+            .new-goods__info.item__info
+              span.item__model Louis XVI ATHOS
+              span.item__price 165 000 руб.
+
+        .new-goods__item.item
+            .new-goods__img.item__img
+              img(src="img/watch.png", alt="Louis XVI ATHOS")
+            .new-goods__info.item__info
+              span.item__model Louis XVI ATHOS
+              span.item__price 165 000 руб.
+        
+        .new-goods__item.item
+            .new-goods__img.item__img
+              img(src="img/watch.png", alt="Louis XVI ATHOS")
+            .new-goods__info.item__info
+              span.item__model Louis XVI ATHOS
+              span.item__price 165 000 руб.
+
