--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -105,3 +105,18 @@ block content
               span.item__model Louis XVI ATHOS
               span.item__price 165 000 руб.
 
+  section.our-brands
+    .container.container--brands
+      h2.our-brands__title наши бренды
+      .our-brands__list.col-12
+        .our-brands__img
+          img(src="img/brands_logo.png", alt="COCO Fine jewelry")
+        
+        .our-brands__img
+          img(src="img/brands_logo.png", alt="COCO Fine jewelry")
+
+        .our-brands__img
+          img(src="img/brands_logo.png", alt="COCO Fine jewelry")
+
+        .our-brands__img
+          img(src="img/brands_logo.png", alt="COCO Fine jewelry")
