--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -191,3 +191,20 @@ h3 {
 		row-gap: 40px;
 	}
 }
+
+//section OUR-BRANDS
+.our-brands {
+	padding-top: 60px;
+	padding-bottom: 75px;
+	text-align: center;
+	background-color: #0F0F0F;
+
+	&__title{
+		margin-bottom: 80px;
+	}
+
+	&__list {
+		display: flex;
+		justify-content: space-between;
+	}
+}
