fix: items links

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,21 +11,21 @@ block content
     .new__season.col-6
       h2.new__title СЕЗОН 2020/21
       .new__products.col-12
-        .new__item.item
+        a(href="#").new__item.item
           .new__img.item__img
             img(src="img/watch.png", alt="Louis XVI ATHOS")
           .new__info.item__info
             span.item__model Louis XVI ATHOS
             span.item__price 165 000 руб.
 
-        .new__item.item
+        a(href="#").new__item.item
           .new__img.item__img
             img(src="img/watch.png", alt="Louis XVI ATHOS")
           .new__info.item__info
             span.item__model Louis XVI ATHOS
             span.item_price 165 000 руб.
 
-        .new__item.item
+        a(href="#").new__item.item
           .new__img.item__img
             img(src="img/watch.png", alt="Louis XVI ATHOS")
           .new__info.item__info
@@ -49,56 +49,56 @@ block content
     section.new-goods
       h2.new-goods__title новые поступления
       .new-goods__products.col-12
-        .new-goods__item.item
+        a(href="#").new-goods__item.item
             .new-goods__img.item__img
               img(src="img/watch.png", alt="Louis XVI ATHOS")
             .new-goods__info.item__info
               span.item__model Louis XVI ATHOS
               span.item__price 165 000 руб.
 
-        .new-goods__item.item
+        a(href="#").new-goods__item.item
               .new-goods__img.item__img
                 img(src="img/watch.png", alt="Louis XVI ATHOS")
               .new-goods__info.item__info
                 span.item__model Louis XVI ATHOS
                 span.item__price 165 000 руб.
         
-        .new-goods__item.item
+        a(href="#").new-goods__item.item
             .new-goods__img.item__img
               img(src="img/watch.png", alt="Louis XVI ATHOS")
             .new-goods__info.item__info
               span.item__model Louis XVI ATHOS
               span.item__price 165 000 руб.
 
-        .new-goods__item.item
+        a(href="#").new-goods__item.item
             .new-goods__img.item__img
               img(src="img/watch.png", alt="Louis XVI ATHOS")
             .new-goods__info.item__info
               span.item__model Louis XVI ATHOS
               span.item__price 165 000 руб.
 
-        .new-goods__item.item
+        a(href="#").new-goods__item.item
               .new-goods__img.item__img
                 img(src="img/watch.png", alt="Louis XVI ATHOS")
               .new-goods__info.item__info
                 span.item__model Louis XVI ATHOS
                 span.item__price 165 000 руб.
         
-        .new-goods__item.item
+        a(href="#").new-goods__item.item
             .new-goods__img.item__img
               img(src="img/watch.png", alt="Louis XVI ATHOS")
             .new-goods__info.item__info
               span.item__model Louis XVI ATHOS
               span.item__price 165 000 руб.
 
-        .new-goods__item.item
+        a(href="#").new-goods__item.item
             .new-goods__img.item__img
               img(src="img/watch.png", alt="Louis XVI ATHOS")
             .new-goods__info.item__info
               span.item__model Louis XVI ATHOS
               span.item__price 165 000 руб.
         
-        .new-goods__item.item
+        a(href="#").new-goods__item.item
             .new-goods__img.item__img
               img(src="img/watch.png", alt="Louis XVI ATHOS")
             .new-goods__info.item__info
