--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -37,6 +37,9 @@ h3 {
 .item {
 	font-family: $headline-font;
 	text-align: left;
+	text-decoration: none;
+	color: #FFF;
+	transition: linear .1s;
 
 	&__img {
 		margin-bottom: 25px;
@@ -63,6 +66,10 @@ h3 {
 		font-size: 16px;
 		line-height: 21px;
 	}
+}
+
+.item:hover {
+	color: #A9A9A9;
 }
 
 // CONTENT
