--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -1,11 +1,11 @@
 footer.footer
 	.footer__info
 		.container.container--footer
-			.footer__item.col-4
+			.footer__item.footer__item--about.col-12.col-md-6.col-xl-4
 				h3.footer__title О магазине
 				p.footer__text.
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper viverra nunc cursus tortor lectus nunc nulla nibh. Egestas amet consectetur vel vitae aliquam dictum suspendisse. Lobortis eget consequat, tellus et et sed turpis. Pretium quisque vitae, amet, porttitor odio ultricies massa pharetra leo. Et ipsum urna fames in sit mi ultrices nisi, nunc.
-			.footer__item.footer__item--categories.col-4
+			.footer__item.footer__item--categories.col-12.col-md-6.col-xl-4
 				h3.footer__title Категории
 				.footer__buttons
 					button.black-button часы
@@ -13,7 +13,7 @@ footer.footer
 					button.black-button ремни
 					button.black-button ювелирные изделия
 					button.black-button запонки
-			.footer__item.footer__item--mailing.col-4
+			.footer__item.footer__item--mailing.col-12.col-xl-4
 				h3.footer__title Рассылка
 				p.footer__text.footer__text--mailing.
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mi semper viverra nunc cursus tortor lectus nunc nulla nibh.
