--- a/src/pug/header.pug
+++ b/src/pug/header.pug
@@ -34,10 +34,13 @@ header.col-12
       .header__menu
         |
         |
+        .header__menu-burger
+        |
+        |
         .header__nav
           |
           |
-          ul 
+          ul.top-menu
             each val in ['понравилось', 'личный кабинет', 'настройки']
               li= val
           .header__icons
