--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ block content
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Purus interdum purus, est tortor pulvinar ut in. Fringilla a diam enim sed justo, sed iaculis sagittis. Tortor id eu interdum nec ut iaculis. Penatibus ullamcorper ultricies morbi ipsum sem metus pharetra, mi. Tortor nibh magna feugiat id nunc, dui nisl viverra.
   
   section.new
-    .new__season.col-6
+    .new__season.col-xxl-6.col-12
       h2.new__title СЕЗОН 2020/21
       .new__products.col-12
         a(href="#").new__item.item
@@ -32,14 +32,14 @@ block content
             span.item__model Louis XVI ATHOS
             span.item__price 165 000 руб.
 
-    .new__collection.col-6
+    .new__collection.col-xxl-6.col-12
       h2.new__title Новая коллекция
       button.transparent-button Каталог
 
   section.last-collection
-    .last-collection__img.col-6
+    .last-collection__img.col-12.col-xl-6
       img(src="img/last_collection.jpg", alt="collection-2018")
-    .last-collection__info.col-6
+    .last-collection__info.col-12.col-xl-6
       h2.last-collection__title коллекция 2018
       p.last-collection__text.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Non rutrum ornare ut mattis habitant dui arcu. Sagittis amet nunc ut neque quis nibh arcu. Vivamus vestibulum nisi et venenatis sed scelerisque magna consectetur. Amet convallis quis gravida facilisis vulputate. Faucibus facilisi habitasse ipsum interdum dictum aliquet. Velit quis ullamcorper pulvinar nulla malesuada integer. Aenean praesent viverra nulla nullam natoque volutpat curabitur auctor. Viverra viverra ullamcorper scelerisque risus dignissim egestas. Id aliquam a aliquam egestas leo orci pharetra sed diam. 
