--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -49,6 +49,7 @@ h3 {
 		width: 260px;
 		height: 325px;
 		background-color: #191B1C;
+		transition: ease .2s;
 	}
 
 	&__info {
@@ -79,7 +80,7 @@ h3 {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	background: url(../img/first_screen.jpg) no-repeat;
+	background: url(../img/first_screen.jpg) no-repeat center;
 	background-size: cover;
 
 	&__logo {
@@ -158,10 +159,19 @@ h3 {
 //section LAST-COLLECTION
 .last-collection {
 	display: flex;
+	flex-wrap: wrap;
+
+	&__img {
+		display: flex;
+		align-items: center;
+
+		img {
+			max-width: 100%;
+		}
+	}
 
 	&__info {
-		padding-top: 100px;
-		padding-bottom: 100px;
+		padding: 100px 50px;
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
@@ -177,6 +187,7 @@ h3 {
 	&__title {
 		position: relative;
 		margin-bottom: 80px;
+		text-align: center;
 	}
 }
 
@@ -192,6 +203,7 @@ h3 {
 
 	&__products {
 		display: grid;
+		justify-items: center;
 		grid-template-columns: 1fr 1fr 1fr 1fr;
 		grid-template-rows: 1fr 1fr;
 		column-gap: 23px;
