--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -14,6 +14,6 @@ html(lang="ru")
     block content
     include footer.pug
 
-    script(src="js/jquery.min.js")
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     script(src="js/bootstrap.min.js")
     script(src="js/script.min.js")
