--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -116,12 +116,12 @@
 			justify-content: space-between;
 		}
 
-		.top-menu--active {
-			display: flex;
-			padding: 0;
-			flex-direction: column;
-			align-items: start;
-		}
+		// .top-menu--active {
+		// 	padding: 0;
+		// 	display: flex;
+		// 	flex-direction: column;
+		// 	align-items: start;
+		// }
 
 		li {
 			padding: 30px 20px;
